<menu xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:com.codepath.imagesearch="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_search"
          android:orderInCategory="5"
          android:title="@string/search"
          android:icon="@drawable/ic_search"
          android:showAsAction="collapseActionView|ifRoom"

          android:actionViewClass="android.widget.SearchView"/>
          <!--   android:actionViewClass="com.actionbarsherlock.widget.SearchView"
          android:showAsAction="ifRoom|collapseActionView" -->
          
    
    <item android:id="@+id/action_filter"
          android:orderInCategory="5"
          android:title="@string/filter"
          android:icon="@drawable/filter_icon"
          android:showAsAction="always" />
    
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/reset"
        android:icon="@drawable/ic_refresh"/>

</menu>
