<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FilterActivity" >

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/imagesize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvSize"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="44dp"
        android:text="@string/colorfilter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvColor"
        android:layout_below="@+id/tvColor"
        android:layout_marginTop="44dp"
        android:text="@string/imagetype"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvType"
        android:layout_below="@+id/tvType"
        android:layout_marginTop="44dp"
        android:text="@string/site"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSite"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSite"
        android:layout_alignTop="@+id/tvSize" />

    <Spinner
        android:id="@+id/spColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSize"
        android:layout_alignTop="@+id/tvColor" />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spColor"
        android:layout_alignTop="@+id/tvType" />

    <!-- <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSite"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/submit_next" />
 -->

	<View
	    android:id="@+id/horz"
    	android:layout_width="match_parent"
    	android:layout_marginTop="20dp"
		android:layout_height="2dp"
		android:background="#FFFFFFFF" 
		android:layout_below="@+id/tvSite"/>
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSite"
        android:layout_below="@+id/horz"
        android:layout_marginTop="30dp"
        android:text="@string/cancelBtn"
        android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvCancel"
        android:layout_alignBottom="@+id/tvCancel"
        android:layout_alignLeft="@+id/etSite"
        android:layout_marginLeft="43dp"
        android:text="@string/searchBtn"
        android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

     <View
        android:id="@+id/v1"
        android:layout_width="2dp"
        android:layout_height="70dp"
        android:layout_below="@+id/horz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#FFFFFFFF" />

</RelativeLayout>
